--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <tr>
           <td colspan="3">
-            <img src="/assets/images/food.jpg" alt="ảnh món ăn" />
+            <img src="./assets/images/food.jpg" alt="ảnh món ăn" />
           </td>
         </tr>
 
